# Clocker

./: CMakeLists.txt  Cargo.toml  README.md  build.sh  clean.sh  clocker.c  clocker.geany  lint_format.sh  uncrustify.cfg
include/: clocker.h  clocker_config.h  config.h  date_time.h  file_utils.h  logger.h  timesheet.h  user.h  util.h
src/: clocker.cpp  clocker_config.cpp  config.cpp  config.rs  main.cpp  main.rs  punch.rs  timesheet.cpp  user.cpp
